# localchat

./: Cargo.toml
src/: lib.rs  logger.rs  main.rs  server.rs  sv.rs  terminal.rs  test.rs
tests/: lib.rs
tests/scripts/: test.ps1
