[package]
name = "localchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[[bin]]
name = "terminal"
path = "./src/terminal.rs"

[[bin]]
name = "sv"
path = "./src/sv.rs"

[dependencies]
chrono = "0.4.38"
crossterm = "0.27.0"
